# pythia

./: pyproject.toml
docker/: pythia-compose.yml  pythia-compose.yml.bk  pythia-dockerfile  requirements.txt
documentation/: RAG.odt
src/: pythia.sh
src/chains/: simple_chat.py
src/tools/: flush_gpu.py
src/tools/RAG/: pdf_loader.py
src/tools/RAG/TEI/: docker-compose.yml
src/tools/RAG/VectorStore/milvus_local/: .env  docker-compose.yml
src/tools/RAG/VectorStore/milvus_local/volumes/milvus/rdb_data/: IDENTITY  LOG  LOG.old.1754562685552339
src/tools/RAG/VectorStore/milvus_local/volumes/milvus/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  LOG.old.1754562685484321  MANIFEST-000010  MANIFEST-000015
src/tools/RAG/VectorStore/milvus_local/volumes/minio/.minio.sys/: format.json
src/tools/RAG/VectorStore/milvus_local/volumes/volumes/milvus/rdb_data/: 000017.sst  000023.sst  IDENTITY  LOG  LOG.old.1755278820072531  LOG.old.1755279209704587  MANIFEST-000024
src/tools/RAG/VectorStore/milvus_management/: milvus_manager.py
src/ui/: launcher_server.py  ui.py
src/vllm_server/: Llama-3.1-8B-Instruct.json  Llama-4-Scout-17B-16E-Instruct.json  Mistral-7B-Instruct-v0.3.json  launch-vllm.sh  vllm_chat_server.py
toGPT/: Llama-3.1-8B-Instruct.txt  chat_memory.txt  close_vllm_server.txt  docker-compose.txt  launcher_server.py.txt  milvus_diag.py.txt  milvus_manager.py.txt  pdf_loader.py.txt  pdf_loader.txt  pythia-compose.yml.txt  pythia-dockerfile.txt  pythia.sh.txt  requirements.txt  simple_RAG_chain.txt  tree.txt  ui.py.txt  ui.txt
(+90 files in other folders)
