[project]
name = "pythia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "notebook>=7.4.4",
    "openai>=1.97.1",
    "pypdf>=5.8.0",
    "pyqt5>=5.15.11",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
    "vllm>=0.9.1",
]
